--- a/scss/_menu.scss
+++ b/scss/_menu.scss
@@ -13,7 +13,9 @@
     margin: 0 0 5px 0;
     background: #fff;
     @include easeOut();
-    &:nth-child(3){margin:0;}
+    &:nth-child(3) {
+      margin: 0;
+    }
   }
 
   // Rotate into X on open
@@ -22,18 +24,110 @@
 
     .btn-line {
       // line 1 rotate
-      &:nth-child(1){
+      &:nth-child(1) {
         // transform: rotate(45deg);
         transform: translate(0px, 8px) rotate(45deg);
       }
       // line 2 hide
-      &:nth-child(2){
+      &:nth-child(2) {
         opacity: 0;
       }
       // line 3 rotate
-      &:nth-child(3){
-        transform: translate(0px, -8px) rotate(-45deg); 
+      &:nth-child(3) {
+        transform: translate(0px, -8px) rotate(-45deg);
       }
     }
+  }
+}
+
+// Menu Overlay
+.menu {
+  position: fixed;
+  top: 0;
+  width: 100%;
+  opacity: 0.9;
+  visibility: hidden;
+
+  &.show {
+    visibility: visible;
+  }
+
+  &-branding,
+  &-nav {
+    display: flex;
+    flex-flow: column wrap;
+    align-items: center;
+    justify-content: center;
+    float: left;
+    width: 50%;
+    height: 100vh;
+    overflow: hidden;
+  }
+
+  &-nav {
+    margin: 0;
+    padding: 0;
+    background: darken($primary-color, 5);
+    list-style: none;
+    transform: translate3d(0, -100%, 0);
+    @include easeOut;
+
+    &.show {
+      transform: translate3d(0,0,0);
+    }
+  }
+
+  &-branding {
+    background: $primary-color;
+    @include easeOut;
+    transform: translate3d(0, 100%,0);
+
+    &.show {
+      transform: translate3d(0,0,0);
+    }
+
+    .portrait {
+      width: 250px;
+      height: 250px;
+      background: url('../img/portrait.jpg');
+      border-radius: 50%;
+      border: solid 3px $secondary-color;
+    }
+  }
+
+  .nav-item {
+    transform: translate3d(600px, 0,0);
+    @include easeOut;
+  
+    &.show {
+      transform: translate3d(0,0,0);
+    }
+
+    &.current > a {
+      color: $secondary-color;
+    }
+  }
+
+  .nav-link {
+    display: inline-block;
+    position: relative;
+    font-size: 30px;
+    text-transform: uppercase;
+    padding: 1rem 0;
+    font-weight: 300;
+    color: #fff;
+    text-decoration:  none;
+    @include easeOut;
+
+    &:hover {
+      color: $secondary-color;
+    }
+  }
+}
+
+// delay each nav item slide by .1s
+@for $x from 1 through 4 {
+  .nav-item:nth-child(#{$x}){
+    transition-delay: $x * 0.1s;
   }
 }
