--- a/scss/_menu.scss
+++ b/scss/_menu.scss
@@ -45,7 +45,6 @@
   position: fixed;
   top: 0;
   width: 100%;
-  opacity: 0.9;
   visibility: hidden;
 
   &.show {
@@ -65,9 +64,9 @@
   }
 
   &-nav {
+    background: rgba(darken($primary-color, 5), 0.9);
     margin: 0;
     padding: 0;
-    background: darken($primary-color, 5);
     list-style: none;
     transform: translate3d(0, -100%, 0);
     @include easeOut;
@@ -78,7 +77,7 @@
   }
 
   &-branding {
-    background: $primary-color;
+    background: rgba(darken($primary-color, 5), 0.9);
     @include easeOut;
     transform: translate3d(0, 100%,0);
 
@@ -89,7 +88,7 @@
     .portrait {
       width: 250px;
       height: 250px;
-      background: url('../img/portrait.jpg');
+      background: url('/dist/img/portrait.jpg');
       border-radius: 50%;
       border: solid 3px $secondary-color;
     }
@@ -98,7 +97,7 @@
   .nav-item {
     transform: translate3d(600px, 0,0);
     @include easeOut;
-  
+ 
     &.show {
       transform: translate3d(0,0,0);
     }
