--- a/scss/_config.scss
+++ b/scss/_config.scss
@@ -1,5 +1,5 @@
-$primary-color: #444;
-$secondary-color: #eece1a;
+$primary-color: rgb(34, 29, 50);
+$secondary-color: #d89042;
 $show-home-image: true;
 $home-image: url(../img/background.jpg);
 $background-opacity: 0.9;
@@ -32,9 +32,9 @@ $background-opacity: 0.9;
 // Set text color
 @function set-text-color($color){
   @if (lightness($color) > 40) {
-    @return #000;
+    @return #222;
   } @else {
-    @return #fff;
+    @return #ddd;
   }
 }
 
