--- a/scss/_config.scss
+++ b/scss/_config.scss
@@ -33,7 +33,7 @@ $background-opacity: 0.9;
 // Set text color
 @function set-text-color($color){
   @if (lightness($color) > 40) {
-    @return #222;
+    @return rgb(29, 36, 50);
   } @else {
     @return #f4f6f8;
   }
