--- a/scss/_menu.scss
+++ b/scss/_menu.scss
@@ -1,6 +1,9 @@
 // menu button
 .menu-btn {
   position: absolute;
+  background: rgba(#fff, 0.1);
+  border-radius: 10%;
+  padding: .4rem;
   z-index: 3;
   right: 35px;
   top: 35px;
