--- a/scss/main.scss
+++ b/scss/main.scss
@@ -76,6 +76,7 @@ main {
   }
 }
 
+// about page
 .about-info {
   display: grid;
   grid-gap: 30px;
@@ -93,7 +94,8 @@ main {
   
   .bio {
     grid-area: bio;
-    font-size: 1.5rem;
+    font-size: 1.3rem;
+    padding-right: 1rem;
   }
   
   .job {
@@ -134,9 +136,10 @@ main {
 .boxes{
   display: flex;
   flex-wrap: wrap;
+  flex-direction: column;
   justify-content: space-evenly;
   align-items: center;
-  margin-top: 1rem;
+  margin-top: 4rem;
 
   div {
     font-size: 2rem;
@@ -146,12 +149,28 @@ main {
     @include easeOut;
     
     &:hover {
-      padding: 0.5rem 1.5rem;
-      background: $secondary-color;
-      color: set-text-color($secondary-color);
-      span {
-        color: set-text-color($secondary-color);
-      }
+      // padding: 0.5rem 1.5rem;
+      // background: $secondary-color;
+      // color: set-text-color($secondary-color);
+      // span {
+      //   color: set-text-color($secondary-color);
+      // }
+      // a {
+      //   color: set-text-color($secondary-color); 
+      // 
+      border-color: $secondary-color;
+      background: lighten($primary-color, 5);
+    }
+  }
+}
+
+.icons-contact {
+  a {
+    padding: 0.5rem;
+
+    &:hover {
+      color: $secondary-color;
+      @include easeOut();
     }
   }
 }
