--- a/scss/main.scss
+++ b/scss/main.scss
@@ -77,42 +77,63 @@ main {
 }
 
 // about page
-.about-info {
+.bio {
   display: grid;
   grid-gap: 30px;
-  grid-template-areas:
-    'bioimage bio bio'
-    'job1 job2 job3';
   grid-template-columns: repeat(3, 1fr);
-
-  .bio-image {
-    grid-area: bioimage;
+  :nth-child(2){grid-column: 2 / 4;}
+  :nth-child(3){grid-column: 1 / 3;}
+  :nth-child(6){grid-column: 2 / 4;}
+  margin-right: 40px;
+  margin-bottom: 40px;
+ 
+  .bio-img {
     margin: auto;
-    border-radius: 50%;
+    // // border-radius: 50%;
     border: $secondary-color 3px solid;
+    img {
+      display: block;
+    }  
   }
   
-  .bio {
-    grid-area: bio;
+  .bio-text {
     font-size: 1.3rem;
     padding-right: 1rem;
   }
-  
-  .job {
-    background: lighten($primary-color, 5);
-    padding: 0.5rem;
-    border-bottom: $secondary-color 5px solid;
-  }
-  
-  .job-1 {
-    grid-area: job1;
-  }
-  .job-2 {
-    grid-area: job2;
-  }
-  .job-3 {
-    grid-area: job3;
-  }
+}
+
+.bio-img-baby-shades {
+  height: 300px;
+  width: 400px;
+}
+.bio-img-blasticus {
+  height: 400px;
+  width: 265px;
+}
+
+.bio-img-camera{
+  height: 420px;
+  width: 329px;
+}
+
+.imdb-link:hover{
+  text-decoration: underline;
+}
+
+.job {
+  background: lighten($primary-color, 5);
+  padding: 0.5rem;
+  border-bottom: $secondary-color 5px solid;
+}
+
+.job-1 {
+  grid-area: job1;
+}
+.job-2 {
+  grid-area: job2;
+}
+.job-3 {
+  grid-area: job3;
 }
 
 // work/projects
