--- a/scss/_config.scss
+++ b/scss/_config.scss
@@ -1,6 +1,8 @@
 // $primary-color: rgb(31, 29, 50);
-$primary-color: rgb(29, 36, 50);
-$secondary-color: #e9a051;
+// $primary-color: rgb(29, 36, 50);
+$primary-color: rgb(52, 54, 58);
+// $secondary-color: #e9a051;
+$secondary-color: #81d4ed;
 $show-home-image: true;
 $home-image: url(../img/background.jpg);
 $background-opacity: 0.9;
