--- a/scss/_config.scss
+++ b/scss/_config.scss
@@ -11,26 +11,27 @@ $background-opacity: 0.9;
   transition: all 0.3s ease-out;
 }
 
-@mixin background {
-  @if $show-home-image {
-    &#bg-img {
-      background: $home-image;
-      background-attachment: fixed;
-      background-size: cover;
+// @mixin background {
+//   @if $show-home-image {
+//     &#bg-img {
+//       background: $home-image;
+//       background-attachment: scroll;
+//       background-size: cover;
+//       height: 100vh;
 
-      &:after {
-        content: "";
-        position: absolute;
-        top: 0;
-        right: 0;
-        width: 100%;
-        height: 100%;
-        background: rgba($primary-color, $background-opacity);
-        z-index: -1;
-      }
-    }
-  }
-}
+//       &:after {
+//         content: "";
+//         position: absolute;
+//         top: 0;
+//         right: 0;
+//         width: 100%;
+//         height: 100%;
+//         background: rgba($primary-color, $background-opacity);
+//         z-index: -1;
+//       }
+//     }
+//   }
+// }
 
 // Set text color
 @function set-text-color($color){
