--- a/scss/main.scss
+++ b/scss/main.scss
@@ -6,13 +6,14 @@
 }
 
 body {
-  @include background();
+  // @include background();
   background: $primary-color;
   color: set-text-color($primary-color);
   height: 100%;
   margin: 0;
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   line-height: 1.5;
+  
 }
 
 // headings
@@ -20,7 +21,7 @@ h1,
 h2,
 h3 {
   margin: 0;
-  font-weight: 400;
+  font-weight: 200;
 
   &.lg-heading {
     font-size: 6rem;
@@ -49,11 +50,14 @@ header {
 }
 
 main {
+  background: rgba($primary-color, $background-opacity);
   padding: 4rem;
-  // height: 100%;
+  height: 100%;
   // for sticky footer: set min height equal to 100vh - footer size
   min-height: calc(100vh - 60px);
-
+  .landing{
+     height: 100vh;  
+  }
   .icons {
     margin-top: 1rem;
 
@@ -69,11 +73,30 @@ main {
 
   &#home {
     overflow: hidden;
-
+    height: 100vh;
     h1 {
       margin-top: 20vh;
     }
   }
+}
+
+.background-image {
+  position: absolute;
+  height: 100vh;
+  width: 100vw;
+  background: $home-image;
+  background-size: cover; 
+  z-index: -2;
+}
+
+#home-about {
+  border: 1px solid white;
+  background: $primary-color;
+}
+
+#home-work {
+  border: 1px solid white;
+  background: $primary-color;
 }
 
 // about page
