--- a/scss/_menu.scss
+++ b/scss/_menu.scss
@@ -1,7 +1,7 @@
 // menu button
 .menu-btn {
   position: absolute;
-  background: rgba(#fff, 0.1);
+  background: rgba(darken($light-text-color,50), 0.4);
   border-radius: 10%;
   padding: .4rem;
   z-index: 3;
