--- a/scss/main.scss
+++ b/scss/main.scss
@@ -123,9 +123,54 @@ main {
 }
 
 #home-about {
+  .home-about-headline{
+    // background: $secondary-color;
+    // use this for full page banners
+    // border-bottom-left-radius: 200px;
+    // &::after{
+    //   position: relative;
+    //   height: 500px;
+    //   background: red;
+    // }
+  }
+  .home-about-content {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    align-items: center;
+    margin: 5rem 2rem;
+  }
+
+  .home-about-text{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 50vw;
+    margin: 1rem;
+    // margin-left: 3rem;
+    // margin-top: 2rem;
+    p {
+      // vertical-align: middle;
+      text-align: left;
+      margin: 2rem;
+      a {
+        color: blue;
+        &:hover{
+          text-decoration: underline;
+        }
+      }
+      
+    }
+    background: lighten($secondary-color, 20);
+    border-radius: 3%;
+  }
+  .home-about-img {
+    margin-right: 2rem;
+    border: 3px solid $primary-color;
+    border-radius: 2%;
+  }
   height: 100vh;
   width: 100vw;
-  border: 1px solid white;
   background: $light-text-color;
   color: $primary-color;
   h2 {
@@ -137,7 +182,6 @@ main {
 #home-work {
   height: 100vh;
   width: 100vw;
-  border: 1px solid white;
   background: $primary-color;
   h2 {
     text-align: center;
