--- a/scss/main.scss
+++ b/scss/main.scss
@@ -122,30 +122,41 @@ main {
   z-index: -2;
 }
 
+.home-section-title {
+  font-size: 3rem;
+  text-align: center;
+  padding-top: 1rem;
+  text-shadow: 0 1px 2px rgba($primary-color, 0.25);
+}
+
+#home-section-title-work {
+  text-shadow: 0 1px 2px rgba($secondary-color, 0.25); 
+}
+
 #home-about {
-  .home-about-headline{
-    // background: $secondary-color;
-    // use this for full page banners
-    // border-bottom-left-radius: 200px;
-    // &::after{
-    //   position: relative;
-    //   height: 500px;
-    //   background: red;
-    // }
-  }
-  .home-about-content {
+  height: 100vh;
+  width: 100vw;
+  background: $light-text-color;
+  color: $primary-color;
+  // h2 {
+  //   text-align: center;
+  //   padding-top: 1rem;
+  // }
+  #home-about-content {
     display: flex;
     flex-wrap: wrap;
     justify-content: space-around;
     align-items: center;
     margin: 5rem 2rem;
+    
+    overflow: hidden;
   }
 
-  .home-about-text{
+  #home-about-text{
     display: flex;
     align-items: center;
     justify-content: center;
-    width: 50vw;
+    width: 40vw;
     margin: 1rem;
     // margin-left: 3rem;
     // margin-top: 2rem;
@@ -161,22 +172,17 @@ main {
       }
       
     }
-    background: lighten($secondary-color, 20);
+    background: lighten($secondary-color, 5);
     border-radius: 3%;
   }
-  .home-about-img {
+  #home-about-img {
     margin-right: 2rem;
     border: 3px solid $primary-color;
     border-radius: 2%;
+    height: 420px;
+    width: 329px;
   }
-  height: 100vh;
-  width: 100vw;
-  background: $light-text-color;
-  color: $primary-color;
-  h2 {
-    text-align: center;
-    padding-top: 1rem;
-  }
+  
 }
 
 #home-work {
@@ -191,12 +197,30 @@ main {
 #home-contact {
   height: 100vh;
   width: 100vw;
-  border: 1px solid white;
   background: $light-text-color;
   color: $primary-color;
-  h2 {
-    text-align: center;
-    padding-top: 1rem;
+ 
+  .boxes{
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
+    margin-top: 4rem;
+  
+    div {
+      font-size: 2rem;
+      border: 3px #d4d3cd solid;
+      padding: 1.5rem 2.5rem;
+      margin-bottom: 3rem;
+      @include easeOut;
+      background: $primary-color;
+      
+      &:hover {
+        border-color: $secondary-color;
+        background: lighten($primary-color, 3);
+      }
+    }
   }
 }
 
@@ -305,6 +329,7 @@ main {
     padding: 1.5rem 2.5rem;
     margin-bottom: 3rem;
     @include easeOut;
+    background: $primary-color;
     
     &:hover {
       // padding: 0.5rem 1.5rem;
@@ -367,3 +392,17 @@ main {
 }
 
 @import 'mobile';
+
+
+
+
+// .home-about-headline{
+    // background: $secondary-color;
+    // use this for full page banners
+    // border-bottom-left-radius: 200px;
+    // &::after{
+    //   position: relative;
+    //   height: 500px;
+    //   background: red;
+    // }
+  // }
