--- a/scss/_music.scss
+++ b/scss/_music.scss
@@ -1,26 +1,56 @@
-
+.main-block {
+  background: linear-gradient(lighten($primary-color, 10), $primary-color);
+  // position: fixed;
+  margin: 0;
+  padding-top: 5rem;
+  padding-left: 3rem;
+  top: 0;
+  left: 0;
+  h1 {
+    padding-bottom: 2rem;
+    font-size: 3rem;
+  }
+  span {
+    font-size: 2rem;
+  }
+}
+.project-wrapper {
+  margin: 3rem;
+}
+.album-cover {
+  height: 300px;
+  width: 300px;
+}
+.album-info-wrapper {
+  margin-left: 3rem;
+  display: inline-block;
+  width: 500px;
+  height: 200px;
+}
 .playlist{
   list-style: none;
-  width: 70vw;
-  height: 70vh;
+  width: 100%;
+  height: 300px;;
   overflow: auto;
   margin-top: 20px;
   border: 1px solid #333;
   border-radius:5px;
   padding: 0;
   a {
-    color: $primary-color;
+    color: $light-text-color;
   }
 }
 .playlist li{
   padding: 5px 10px;
+  color: $light-text-color;
+  border-bottom: 1px solid darken($light-text-color, 70);
 }
-.playlist li:nth-child(odd){
-  background-color:#eee;
-}
-.playlist li:nth-child(even){
-  background-color:#ddd;
-}
+// .playlist li:nth-child(odd){
+//   background-color:#eee;
+// }
+// .playlist li:nth-child(even){
+//   background-color:#ddd;
+// }
 
 .audio-timeline-container {
   height:50px;
@@ -43,8 +73,8 @@
 }
 /* .play{background: url('http://www.alexkatz.me/codepen/img/play.png') ;} */
 /* .pause{background: url('http://www.alexkatz.me/codepen/img/pause.png') ;} */
-.timeline{
-	width: 350px;
+.timeline {
+	width: 100%;
 	height: 20px;
   margin-top: 0px;
   margin-right:20px;
