--- a/scss/_music.scss
+++ b/scss/_music.scss
@@ -43,7 +43,7 @@
 }
 
 .playlist-timeline-wrapper {
-  margin: 1rem;
+  margin: 0rem;
   width: 100%;
   display: flex;
   align-items: center;
@@ -54,7 +54,7 @@
 .playlist{
   list-style: none;
   width: 70%;
-  height: 300px;;
+  height: 28vh;
   overflow: auto;
   margin-top: 20px;
   border: 1px solid #333;
@@ -62,12 +62,22 @@
   padding: 0;
   a {
     color: $light-text-color;
+    padding-left: .5rem;
   }
 }
 .playlist li{
   padding: 10px 10px;
   color: $light-text-color;
   border-bottom: 1px solid darken($light-text-color, 70);
+  &:hover {
+    background: lighten($primary-color, 4);
+    cursor: pointer;
+  }
+}
+
+.current-song {
+  // background: lighten($primary-color, 4);
+  color: rgb(85, 217, 250) !important;
 }
 // .playlist li:nth-child(odd){
 //   background-color:#eee;
@@ -77,7 +87,7 @@
 // }
 
 .audio-timeline-container {
-  height:120px;
+  height:100px;
   width: 60%;
   // background: #eee;
   vertical-align: middle; 
@@ -88,10 +98,11 @@
   border: 1px solid #333;
   border-radius: 5px;
   background: lighten($primary-color, 4);
+ 
 }
 .audio-control-buttons{
   padding: 1rem;
-  float:left;
+  // float:left;
   font-size: 2rem;
   text-align: center;
   vertical-align: middle;
@@ -109,19 +120,27 @@
 .timeline {
 	width: 70%;
 	height: 4px;
-  margin-top: 10px;
   margin-right:20px;
 	float: left;
 	border-radius: 15px;
-  background: darken($light-text-color, 10);
+  background: darken($light-text-color, 50);
   vertical-align: middle;
   cursor: pointer;
 }
 .playhead{
+  // visibility: hidden;
 	width: 15px;
 	height: 15px;
 	border-radius: 50%;
 	margin-top: 0px;
   background: darken($light-text-color, 10);
-  
+  position: relative;
+  bottom: 10px;
+  right: 1px;
+}
+
+#progress-bar {
+  background: darken($light-text-color, 10);
+  width: 0%;
+  height: 4px;
 }
