--- a/scss/_config.scss
+++ b/scss/_config.scss
@@ -51,7 +51,7 @@ $background-opacity: 0.9;
 }
 
 @mixin mediaMd {
-  @media screen and (max-width: 768px) {
+  @media screen and (max-width: 915px) {
     @content;
   }
 }
@@ -64,6 +64,12 @@ $background-opacity: 0.9;
 
 @mixin mediaXl {
   @media screen and (min-width: 1171px) {
+    @content;
+  }
+}
+
+@mixin mediaShortDesktop {
+  @media screen and (max-height: 800px){
     @content;
   }
 }
