--- a/scss/_music.scss
+++ b/scss/_music.scss
@@ -1,5 +1,5 @@
 .page-wrapper {
-  height: 80vh;
+  height: 100vh;
   width: 100vw;
 }
 // header {
@@ -32,34 +32,42 @@
 }
 
 .album-cover {
-  height: 300px;
-  width: 300px;
+  height: 400px;
+  width: 400px;
 }
 .album-info-wrapper {
   margin-left: 3rem;
+  margin-right: 0;
   display: inline-block;
-  width: 300px;
+  width: 250px;
   height: 200px;
+  overflow: hidden;
+  p {
+    overflow: hidden;
+  }
 }
 
 .playlist-timeline-wrapper {
   margin: 0rem;
   width: 100%;
+  height: 50vh;
   display: flex;
   align-items: center;
-  justify-content: center;
+  // justify-content: center;
   flex-direction: column; 
 }
 
 .playlist{
   list-style: none;
   width: 70%;
-  height: 28vh;
+  height: 45%;
   overflow: auto;
-  margin-top: 20px;
+  margin-top: 3rem;
   border: 1px solid #333;
   border-radius:5px;
+  margin-bottom: 2rem;
   padding: 0;
+
   a {
     color: $light-text-color;
     padding-left: .5rem;
@@ -79,12 +87,6 @@
   // background: lighten($primary-color, 4);
   color: rgb(85, 217, 250) !important;
 }
-// .playlist li:nth-child(odd){
-//   background-color:#eee;
-// }
-// .playlist li:nth-child(even){
-//   background-color:#ddd;
-// }
 
 .audio-timeline-container {
   height:100px;
