add video production full page layout

--- a/scss/_music.scss
+++ b/scss/_music.scss
@@ -86,6 +86,7 @@
 .current-song {
   // background: lighten($primary-color, 4);
   color: rgb(85, 217, 250) !important;
+  // color: #f00 !important;
 }
 
 .audio-timeline-container {
