--- a/scss/_config.scss
+++ b/scss/_config.scss
@@ -1,4 +1,5 @@
 $primary-color: #1f1f24;
+// $primary-color: white;
 $secondary-color: #76949d;
 $light-text-color:#e1e1e0;
 $dark-text-color: rgb(29, 36, 50); 
