--- a/scss/main.scss
+++ b/scss/main.scss
@@ -85,6 +85,7 @@ header {
 main {
   background: rgba($primary-color, $background-opacity);
   padding: 4rem;
+  padding-left: 6rem;
   height: 100%;
   // for sticky footer: set min height equal to 100vh - footer size
   min-height: calc(100vh - 60px);
@@ -125,22 +126,32 @@ main {
 .home-section-title {
   font-size: 3rem;
   text-align: center;
-  padding-top: 1rem;
+  padding: 1rem;
+  margin-bottom: 2rem;
   text-shadow: 0 1px 2px rgba($primary-color, 0.25);
 }
 
 #home-section-title-work {
   text-shadow: 0 1px 2px rgba($secondary-color, 0.25); 
+  margin-bottom: 0
 }
 
 #home-about {
   height: 100vh;
   width: 100vw;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  
   background: $light-text-color;
   color: $primary-color;
   // h2 {
   //   text-align: center;
   //   padding-top: 1rem;
+  // }
+
+  // #about-section-title {
+  //   width: 100vw;
   // }
   #home-about-content {
     display: flex;
@@ -189,6 +200,9 @@ main {
   height: 100vh;
   width: 100vw;
   background: $primary-color;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
   h2 {
     text-align: center;
     padding-top: 1rem;
@@ -213,6 +227,14 @@ main {
     height: 100px;
     width: 100px;
   }
+
+  #dots-container {
+    align-self: flex-end;
+    height: 10vh;
+  }
+
+ 
+
   .home-project-container {
     // margin: 1rem;
     padding: 1rem;
@@ -234,18 +256,23 @@ main {
     background: $secondary-color;
     // background: red;
   }
+
 }
+
 #home-contact {
   height: 100vh;
   width: 100vw;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
   background: $light-text-color;
   color: $primary-color;
  
   .boxes{
     display: flex;
-    flex-wrap: wrap;
+    // flex-wrap: wrap;
     flex-direction: column;
-    justify-content: space-evenly;
+    // justify-content: space-evenly;
     align-items: center;
     margin-top: 4rem;
   
