--- a/scss/_mobile.scss
+++ b/scss/_mobile.scss
@@ -34,7 +34,12 @@
     .lg-heading {
       line-height: 1;
       margin-bottom: 1rem;
-    }    
+    } 
+    &#home{
+      h1{
+        margin-top: 25vh;
+      }
+    }   
   }
 
   ul.menu-nav,
@@ -75,18 +80,16 @@
     grid-template-columns: 1fr;
   }
   
-  .projects{
-    grid-template-columns: repeat(2, 1fr);
-  }
+ 
   #home-about{
     #home-about-content {
       margin: 2rem 2rem;
     }
     #home-about-text{
       width: 65vw;
-      height: 30vh;
+      height: 20vh;
       overflow: hidden;
-      // margin-top: 75px;
+      margin-bottom: 3rem;
     }
     #home-about-img {
       // // visibility: hidden;
@@ -94,6 +97,10 @@
       // width: 247px;
       margin-right: 0;
     }
+  }
+
+  #about-section-title {
+    margin-bottom: 0;
   }
   
   // music project page
@@ -114,7 +121,25 @@
     height: 50%;
     margin-bottom: 5rem;
   }
+
+  // home work section
+  #home-work {
+    #home-section-title-work {
+      margin-bottom: 5rem;
+    }
+    .glider-wrap {
+      padding: 0 2rem;
+    }
+    .glider-next {
+      width: 75px;
+    }
+  }
+ 
   
+
+  .projects{
+    grid-template-columns: repeat(2, 1fr);
+  }
   
 }
 
