--- a/scss/_mobile.scss
+++ b/scss/_mobile.scss
@@ -27,7 +27,7 @@
 
 // Tablets and Small Laptops
 @include mediaMd {
-  // home page
+  // home main
   main {
     align-items: center;
     text-align: center;
@@ -42,6 +42,31 @@
     }   
   }
 
+  // home about
+  #home-about{
+    #home-about-content {
+      margin: 2rem 2rem;
+    }
+    #home-about-text{
+      width: 65vw;
+      height: 20vh;
+      overflow: hidden;
+      margin-bottom: 3rem;
+    }
+    #home-about-img {
+      // // visibility: hidden;
+      // height: 325px;
+      // width: 247px;
+      margin-right: 0;
+    }
+    #about-section-title {
+      margin-bottom: 0;
+    }
+  }
+
+ 
+
+  // nav menu
   ul.menu-nav,
   div.menu-branding {
     float: none;
@@ -70,6 +95,7 @@
     }
   }
 
+  // about page
   .about-info {
     grid-template-areas:
     'bioimage'
@@ -81,27 +107,7 @@
   }
   
  
-  #home-about{
-    #home-about-content {
-      margin: 2rem 2rem;
-    }
-    #home-about-text{
-      width: 65vw;
-      height: 20vh;
-      overflow: hidden;
-      margin-bottom: 3rem;
-    }
-    #home-about-img {
-      // // visibility: hidden;
-      // height: 325px;
-      // width: 247px;
-      margin-right: 0;
-    }
-  }
-
-  #about-section-title {
-    margin-bottom: 0;
-  }
+ 
   
   // music project page
   .main-info-block {
@@ -145,10 +151,37 @@
 
 // Smartphones
 @include mediaSm {
-  
-  main#home h1{
-    margin-top: 10vh;
+  // home main
+  main#home {
+    padding: 4rem;;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    h1{
+      margin-top: 0;
+      font-size: 5rem;
+    }
+    h2 {
+      padding: 0;
+    }
   }
+
+  // home about
+  #home-about {
+    #home-about-content {
+      #home-about-text {
+        height: 40vh;
+        width: 100vw;
+      }
+      #home-about-img-wrapper {
+        visibility: hidden;
+      }
+    }
+  }
+  
+
+ 
  
   .projects{
     grid-template-columns: 1fr;
