--- a/scss/main.scss
+++ b/scss/main.scss
@@ -181,16 +181,16 @@ main {
     #home-about-img-wrapper {
       display: flex;
       justify-content: center;
-      flex: auto;
+      // flex: auto;
       // border: 3px solid $primary-color;
       // border-radius: 2%;
       height: 420px;
       width: 329px;
       img {
         width: 100%;
-        max-width: 329px;
+        // max-width: 329px;
         height: auto;
-        max-height: 420px;
+        // max-height: 420px;
       }
     }
   }
@@ -277,7 +277,7 @@ main {
     flex-direction: column;
     // justify-content: space-evenly;
     align-items: center;
-    margin-top: 4rem;
+    margin: 4rem 1rem;
   
     div {
       font-size: 2rem;
@@ -386,45 +386,42 @@ main {
 }
 
 // contact page
-.boxes{
-  display: flex;
-  flex-wrap: wrap;
-  flex-direction: column;
-  justify-content: space-evenly;
-  align-items: center;
-  margin-top: 4rem;
-
-  div {
-    font-size: 2rem;
-    border: 3px #d4d3cd solid;
-    padding: 1.5rem 2.5rem;
-    margin-bottom: 3rem;
-    @include easeOut;
-    background: $primary-color;
-    
-    &:hover {
-      // padding: 0.5rem 1.5rem;
-      // background: $secondary-color;
-      // color: set-text-color($secondary-color);
-      // span {
-      //   color: set-text-color($secondary-color);
-      // }
-      // a {
-      //   color: set-text-color($secondary-color); 
-      // 
-      border-color: $secondary-color;
-      background: lighten($primary-color, 5);
+#home-contact {
+  .boxes{
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
+    margin-top: 4rem;
+  
+    div {
+      font-size: 2rem;
+      border: 3px #d4d3cd solid;
+      padding: 1.5rem 2.5rem;
+      margin-bottom: 3rem;
+      @include easeOut;
+      background: $primary-color;
+      
+      &:hover {
+        border-color: $secondary-color;
+        background: lighten($primary-color, 5);
+      }
     }
   }
-}
-
-.icons-contact {
-  a {
-    padding: 0.5rem;
-
-    &:hover {
-      color: $secondary-color;
-      @include easeOut();
+  
+  .icons-contact {
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: center;
+    a {
+      padding: 0.5rem;
+  
+      &:hover {
+        color: $secondary-color;
+        @include easeOut();
+      }
     }
   }
 }
