--- a/scss/_mobile.scss
+++ b/scss/_mobile.scss
@@ -81,9 +81,12 @@
     height: 75vh;
     transform: translate3d(-100%, 0, 0);
     font-size: 24px;
+    padding-bottom: 2rem;
   }
 
   .menu-branding {
+    // top: 25vh;
+    padding-top:3rem;
     height: 25vh;
     transform: translate3d(100%, 0, 0);
 
@@ -192,10 +195,14 @@
     justify-content: center;
     h1 {
       margin-top: 0;
-      font-size: 5rem;
+      font-size: 4rem;
     }
     h2 {
       padding: 0;
+      font-size: 1.5rem;
+    }
+    .icons {
+      font-size: 1.1rem;
     }
   }
 
@@ -204,30 +211,72 @@
     h2 {
       padding-top: 1rem;
     }
+    justify-content: flex-start;
     #home-about-content {
       flex-direction: column;
+      justify-content: flex-start;
+      margin: 0;
       #home-about-text {
-        height: 40vh;
+        height: 45vh;
         width: 80vw;
         margin: 0;
+        margin-top: 1rem;
         p {
-          margin-top: 0;
+          margin:0;
+          padding: .5;
+          padding-bottom: 0;
+          font-size: 1rem;
+          overflow: scroll;
         }
       }
       #home-about-img-wrapper {
         // visibility: hidden;
         margin-top: 1rem;
-        height: 300px;
-        width: 200px;
+        height: 210px;
+        width: 164px;
+        padding-bottom: 3rem;
       }
+    }
+  }
+
+  // home work
+  #home-work {
+    #home-section-title-work {
+      margin: 0;
+      padding: 0 1rem 3rem 1rem;
+    }
+    .glider-wrap{
+      // padding: 0rem 1rem;
+    }
+    .glider {
+      margin: 0;
+    }
+    .glider-prev {
+      margin-right:0;
+      width: 50px;
+      height: 50px;
+      i {
+        float: left;
+      }
+      visibility: hidden;
+    }
+    .glider-next {
+      width: 50px;
+      height: 50px;
+      i {
+        float: right
+      }
+      visibility: hidden;
     }
   }
 
   // home-contact
   #home-contact {
     .boxes {
+      margin-top: 0;
       div {
-        font-size: 1.5rem;
+        font-size: 1.25rem;
+        padding: 1rem;
       }
     }
   }
@@ -244,6 +293,22 @@
       }
     }
   }
+
+  // menu
+  .menu {
+    .menu-branding {
+      height: 35vh;
+      padding-top: 0rem;
+    }
+    &-nav {
+      justify-content: flex-start;
+      .nav-link {
+        padding: .7rem;
+      }
+    }
+    
+  }
+  
 
   .projects {
     grid-template-columns: 1fr;
