--- a/scss/main.scss
+++ b/scss/main.scss
@@ -43,6 +43,7 @@ header {
   position: fixed;
   z-index: 2;
   width: 100%;
+  
 }
 
 .text-secondary {
@@ -163,7 +164,7 @@ main {
       // margin-top: 2rem;
       p {
         // vertical-align: middle;
-        max-height: 400px;
+        // max-height: 400px;
         text-align: left;
         margin: 2rem;
         overflow: hidden;
@@ -173,14 +174,14 @@ main {
             text-decoration: underline;
           }
         }
-        background: lighten($secondary-color, 25);
+        background: linear-gradient(lighten($secondary-color, 25), darken($light-text-color,10));
         border-radius: 3%;
         padding: 1rem;
       }
     }
     #home-about-img-wrapper {
-      display: flex;
-      justify-content: center;
+      // display: flex;
+      // justify-content: center;
       // flex: auto;
       // border: 3px solid $primary-color;
       // border-radius: 2%;
@@ -188,7 +189,7 @@ main {
       width: 329px;
       img {
         width: 100%;
-        // max-width: 329px;
+        // // max-width: 329px;
         height: auto;
         // max-height: 420px;
       }
@@ -212,7 +213,7 @@ main {
   }
   
   .glider-wrap {
-    padding: 0 3rem;
+    padding: 0 0rem;
     // display: inline-block;
   }
   .glider {
@@ -265,6 +266,13 @@ main {
 
 
 #home-contact {
+  height: 100vh;
+  width: 100vw;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  background: $light-text-color;
+  color: $primary-color;
   .boxes{
     display: flex;
     flex-wrap: wrap;
@@ -289,10 +297,6 @@ main {
   }
   
   .icons-contact {
-    display: flex;
-    flex-wrap: wrap;
-    align-items: center;
-    justify-content: center;
     a {
       padding: 0.5rem;
   
@@ -303,38 +307,7 @@ main {
     }
   }
 }
-#home-contact {
-  height: 100vh;
-  width: 100vw;
-  display: flex;
-  justify-content: center;
-  flex-direction: column;
-  background: $light-text-color;
-  color: $primary-color;
- 
-  .boxes{
-    display: flex;
-    // flex-wrap: wrap;
-    flex-direction: column;
-    // justify-content: space-evenly;
-    align-items: center;
-    margin: 4rem 1rem;
-  
-    div {
-      font-size: 2rem;
-      border: 3px #d4d3cd solid;
-      padding: 1.5rem 2.5rem;
-      margin-bottom: 3rem;
-      @include easeOut;
-      background: $primary-color;
-      
-      &:hover {
-        border-color: $secondary-color;
-        background: lighten($primary-color, 3);
-      }
-    }
-  }
-}
+
 
 // about page
 .top-gradient {
@@ -477,8 +450,9 @@ main {
   height: 60px;
 }
 @import 'music';
-@import 'mobile';
+
 @import 'video';
+@import 'mobile';
 
 ::-webkit-scrollbar {
   width: 0px; 
