--- a/scss/_mobile.scss
+++ b/scss/_mobile.scss
@@ -27,6 +27,14 @@
 
 // Tablets and Small Laptops
 @include mediaMd {
+  .top-gradient{
+    height: 18vh;
+    // background: red;
+  }
+  .menu-btn {
+    top: 35px;
+    right: 35px;
+  }
   // home main
   main {
     align-items: center;
@@ -65,6 +73,19 @@
     }
   }
 
+   // home work section
+   #home-work {
+    #home-section-title-work {
+      margin-bottom: 5rem;
+    }
+    .glider-wrap {
+      padding: 0 2rem;
+    }
+    .glider-next {
+      width: 75px;
+    }
+  }
+
   // nav menu
   ul.menu-nav,
   div.menu-branding {
@@ -97,15 +118,27 @@
     }
   }
 
-  // about page
-  .about-info {
-    grid-template-areas:
-      "bioimage"
-      "bio"
-      "job1"
-      "job2"
-      "job3";
-    grid-template-columns: 1fr;
+  // video production
+  #video-production {
+    padding: 3rem;
+    #video-production-heading {
+      font-size: 4rem;
+      text-align: center;
+    }
+    #credit-photo-container {
+      width: 100%;
+      // flex-grow: 1;
+      align-items: center;
+      justify-content: center;
+      // margin: 0rem !important;
+      .credit-category {
+        width: 60vw;
+      }
+      #video-page-movi-img{
+        order: 1;
+      }
+    }
+    
   }
 
   // music project page
@@ -127,19 +160,17 @@
     margin-bottom: 5rem;
   }
 
-  // home work section
-  #home-work {
-    #home-section-title-work {
-      margin-bottom: 5rem;
-    }
-    .glider-wrap {
-      padding: 0 2rem;
-    }
-    .glider-next {
-      width: 75px;
-    }
-  }
-
+ 
+ // about page
+ .about-info {
+  grid-template-areas:
+    "bioimage"
+    "bio"
+    "job1"
+    "job2"
+    "job3";
+  grid-template-columns: 1fr;
+}
   // about page
   #about {
     h1 {
@@ -293,6 +324,40 @@
       }
     }
   }
+
+  // video production page 
+  #video-production {
+
+    padding: 1rem 1rem;
+    #video-production-heading {
+      text-align: center;
+      padding-top: 3rem;
+      padding-bottom: 2rem;
+      font-size: 2rem;
+    }
+    #credit-photo-container{
+      .credit-category {
+        margin: 0.5rem;
+        padding: 0.5rem 1rem;
+        h2 {
+          font-size: 1.5rem;
+          font-weight: 400;
+        }
+        hr {
+          margin-top: .25rem;
+          margin-bottom: 0.5rem
+        }
+        ul {
+          margin-top: 0.2rem;
+          padding-inline-start: 30px;
+          .credit-description {
+            margin-bottom: 1rem;
+          }
+        }
+      }
+    }
+  }
+
 
   // menu
   .menu {
