--- a/scss/_config.scss
+++ b/scss/_config.scss
@@ -5,8 +5,8 @@ $light-text-color:#e1e1e0;
 $dark-text-color: rgb(29, 36, 50); 
 // $secondary-color: #73a789;
 $show-home-image: true;
-$home-image: url(../img/background.jpg);
-$background-opacity: 0.9;
+$home-image: url(../img/portfolio-home-main-scaled.jpg);
+$background-opacity: 0.85;
 
 @mixin easeOut {
   transition: all 0.3s ease-out;
