--- a/scss/_mobile.scss
+++ b/scss/_mobile.scss
@@ -40,6 +40,7 @@
   main {
     align-items: center;
     text-align: center;
+    padding-left: 4rem;
     .lg-heading {
       line-height: 1;
       margin-bottom: 1rem;
@@ -55,20 +56,27 @@
   #home-about {
     #home-about-content {
       margin: 2rem 2rem;
-      flex-wrap: nowrap;
+      flex-wrap: wrap;
+      justify-content: center;
+      align-items: center;
+      #home-about-text {
+        width: 65vw;
+        height: auto;
+        margin-right: 1rem;
+        overflow: hidden;
+        margin-bottom: 3rem;
+        min-width: 300px;
+      }
+      #home-about-img-wrapper {
+        // // visibility: hidden;
+        // height: 325px;
+        // width: 247px;
+        margin-right: 0;
+        padding-bottom: 1rem;
+      }
     }
-    #home-about-text {
-      width: 65vw;
-      height: 20vh;
-      overflow: hidden;
-      margin-bottom: 3rem;
-    }
-    #home-about-img {
-      // // visibility: hidden;
-      // height: 325px;
-      // width: 247px;
-      margin-right: 0;
-    }
+    
+    
     #about-section-title {
       margin-bottom: 0;
     }
@@ -270,20 +278,22 @@
   #home-about {
     h2 {
       padding-top: 1rem;
+      padding-bottom: 0.5rem;
     }
-    justify-content: flex-start;
+    justify-content: center;
+    align-items: center;
     #home-about-content {
       flex-direction: column;
       justify-content: flex-start;
       margin: 0;
       #home-about-text {
-        height: 45vh;
-        width: 80vw;
+        height: 42vh;
+        width: 70vw;
         margin: 0;
         margin-top: 1rem;
         p {
           margin:0;
-          padding: .5;
+          padding: 1rem;
           padding-bottom: 0;
           font-size: 1rem;
           overflow: scroll;
@@ -295,6 +305,7 @@
         height: 210px;
         width: 164px;
         padding-bottom: 3rem;
+        min-width: 280px;
       }
     }
   }
@@ -305,9 +316,7 @@
       margin: 0;
       padding: 0 1rem 3rem 1rem;
     }
-    .glider-wrap{
-      // padding: 0rem 1rem;
-    }
+   
     .glider {
       margin: 0;
     }
