--- a/scss/_vr-project.scss
+++ b/scss/_vr-project.scss
@@ -1,4 +1,4 @@
-#dream-keeper {
+.vr-project {
   padding: 4rem;
   h2 {
     background: rgba(0, 0, 0, 0);
@@ -7,41 +7,49 @@
   }
   .project-info-container {
     display: flex;
-    margin: 5rem 10vw;
+    margin: 1rem;
     .project-info {
       width: 100%;
-      display: grid;
+      display: flex;
       margin-left: 0;
-      grid-gap: 5rem;
-      grid-template-columns: repeat(3, 1fr);
-      :nth-child(2){grid-column: 2 / 4;}
-      :nth-child(3){grid-column: 1 / 3;}
-      :nth-child(6){grid-column: 2 / 4;}
-      
-      .project-info-img {
-        // margin: auto;
-        // // border-radius: 50%;
-        border: $secondary-color 3px solid;
-        img {
-          display: block;
-          max-width: 500px;
-        }  
-      }
-      .project-info-text-container {
+      flex-wrap: wrap;
+      justify-content: space-between;
+      .project-info-block {
         display: flex;
+        // flex-wrap: wrap;
         justify-content: center;
-        align-items: center;
         width: 100%;
-        .project-info-text {
-          font-size: 1.3rem;
-          padding-right: 1rem;
-          max-height: 100%;
-          // background: lighten($primary-color,1)
-          // width: 30vw;
-          // height: auto;
-          overflow: hidden;
+        padding-bottom: 3rem;
+        .project-info-img {
+          margin: 3rem;
+          flex-basis: 40%;
+          // // border-radius: 50%;
+          // height: 50vh;
+          img {
+            display: block;
+            max-width: 100%;
+            min-width: 400px;
+            border: $secondary-color 3px solid;
+          }  
+        }
+        .project-info-text-container {
+          display: flex;
+          justify-content: center;
+          align-items: center;
+          flex-basis: 40%;
+          margin-left: 2rem;
+          .project-info-text {
+            font-size: 1.3rem;
+            // height: 100%;
+            // background: lighten($primary-color,1)
+            max-width: 700px;
+            min-width: 300px;
+            height: auto;
+            overflow: scroll;
+          }
         }
       }
+     
      
     }
   }
