--- a/scss/main.scss
+++ b/scss/main.scss
@@ -144,6 +144,7 @@ main {
 }
 
 #home-about {
+  overflow: hidden;
   height: 100vh;
   width: 100vw;
   display: flex;
@@ -210,6 +211,7 @@ main {
 }
 
 #home-work {
+  overflow: hidden;
   height: 100vh;
   width: 100vw;
   background: $primary-color;
@@ -273,6 +275,7 @@ main {
 }
 
 #home-contact {
+  overflow: hidden;
   height: 100vh;
   width: 100vw;
   display: flex;
@@ -282,7 +285,7 @@ main {
   color: $primary-color;
   .boxes{
     display: flex;
-    flex-wrap: wrap;
+    // flex-wrap: wrap;
     flex-direction: column;
     justify-content: space-evenly;
     align-items: center;
@@ -318,7 +321,7 @@ main {
 
 // about page
 #about {
-  padding: 4rem;
+  padding: 4rem 6rem;
   h2 {
     background: rgba(0, 0, 0, 0);
   }
@@ -329,8 +332,7 @@ main {
     :nth-child(2){grid-column: 2 / 4;}
     :nth-child(3){grid-column: 1 / 3;}
     :nth-child(6){grid-column: 2 / 4;}
-    margin-right: 40px;
-    margin-bottom: 40px;
+    margin: 5vw 10vw;
     
     .bio-img {
       margin: auto;
@@ -361,6 +363,9 @@ main {
       width: 329px;
     }
     
+    .imdb-link {
+      color: rgb(85, 217, 250);
+    }
     .imdb-link:hover{
       text-decoration: underline;
     }
@@ -385,7 +390,7 @@ main {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     grid-gap: 2rem;
-    margin: 0rem 2rem;
+    margin: 0rem 4rem;
     
     .item {
       max-width: 500px;;
