add negative margin to homepage

--- a/scss/_vr-project.scss
+++ b/scss/_vr-project.scss
@@ -47,6 +47,9 @@
             height: auto;
             overflow: scroll;
           }
+          a {
+            color: rgb(85, 217, 250);
+          }
         }
       }
      
