--- a/scss/_mobile.scss
+++ b/scss/_mobile.scss
@@ -296,13 +296,14 @@
   // home main
   main#home {
     padding: 3rem;
+    padding-top: 1rem;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
     font-weight: 100;
     h1 {
-      margin-top: 0;
+      margin-top: 10rem;
       font-size: 4rem;
       font-weight: 100;
     }
@@ -313,6 +314,9 @@
     }
     .icons {
       font-size: 1.1rem;
+    }
+    .mobile-line-break{
+      display: inline;
     }
   }
 
